--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ h2
       var tm; 
       var qual;
       var quan;
-    function myFunction() {
+    function myFunction() {     //myFunction() makes the navbar mobile responsive
       var x = document.getElementById("myTopnav");
       var w=document.getElementById('links')
       if (x.className === "topnav") {
