--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/jquery-3.5.1.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <meta name='viewport' 
@@ -15,7 +16,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=0.8, user-scalable=no" />
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Latest compiled and minified CSS -->
@@ -53,6 +54,10 @@
   height: 80% 
   width:80%;
 }
+#myForm
+{
+  display:none;
+}
 .stack1
 {
   top:20rem;
@@ -62,6 +67,109 @@
 {
   margin-left:20%;
 }
+.chat-box{
+  position: absolute;
+  background: white;
+  width: 300px;
+  border-radius: 10px 10px 0px 0px;
+}
+.chat-head{
+  width: inherit;
+  height: 45px;
+  background: black;
+  border-radius: 10px 10px 0px 0px;
+}
+.chat-head h4{
+  color: white;
+  padding: 8px;
+  display: inline-block;
+}
+.chat-head img{
+  cursor: pointer;
+  float: right;
+  width: 25px;
+  margin: 10px;
+}
+
+.chat-body{
+  height: 355px;
+  width: inherit;
+  overflow: auto;
+  margin-bottom: 45px;
+   border:2px black solid;
+   border-radius:0px 0px 10px 10px;
+}
+.chat-text{
+  position: absolute;
+  bottom: 0px;
+  height: 45px;
+  width: inherit;
+}
+.chat-text textarea{
+  width: 85%;
+  height: inherit; 
+  box-sizing: border-box;
+  border: 1px solid #bdc3c7;
+  padding: 10px;
+  resize: none;
+}
+.chat-text textarea:active, .chat-text textarea:focus, .chat-text textarea:hover{
+  border-color: royalblue;
+}
+.b
+{
+  border-radius:5px;
+}
+.msg-send{
+  background:black;
+}
+.msg-receive{
+  background: black;
+}
+.msg-send, .msg-receive{
+  width: 200px;
+  height: auto;
+  padding: 5px 5px 5px 10px;
+
+  border-radius: 3px;
+  line-height: 30px;
+  position: relative;
+  color: white;
+}
+.msg-send
+{
+  margin-right:10px;
+    margin-top: 10px;
+    float:right;
+}
+.msg-receive
+{
+    margin: 10px 10px;
+}
+.msg-receive:before{
+  content: '';
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border: 15px solid;
+  border-color: transparent #3498db transparent transparent;
+  left: -29px;
+  top: 7px;
+}
+.msg-send:after{
+  content: '';
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border: 15px solid;
+  border-color: transparent transparent transparent #2ecc71;
+  right: -29px;
+  top: 7px;
+}
+.msg-receive:hover, .msg-send:hover{
+  opacity: .9;
+}
+
 #op
 {
   width:30rem;
@@ -113,6 +221,37 @@ position: relative;
   background-color:green;
   font-family: 'Ubuntu', sans-serif;
 
+}
+.b
+{
+  color: white;
+transition: all 0.5s;
+position: relative;
+  color:#ffffff;
+  width:100%;
+  border:none;
+  background-color:green;
+  font-family: 'Ubuntu', sans-serif;
+}
+.b::before {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 1;
+background-color: rgba(255,255,255,0.1);
+transition: all 0.3s;
+}
+.b:hover::before {
+opacity: 0 ;
+transform: scale(0.5,0.5);
+}
+
+.b:hover::after {
+opacity: 1;
+transform: scale(1,1);
 }
 .buy::before {
 content: '';
@@ -179,6 +318,26 @@ button
   top:93%;
   position:absolute;
   margin-left:940px;
+}
+.open-button
+{
+  top:142%;
+  position:absolute;
+  margin-left:680px;
+  width:230px;
+  height:40px;
+  background-color:black;
+  color:white;
+}
+.open-button:hover
+{
+  opacity:0.8;
+}
+.wrapper
+{
+   top:70%;
+  position:absolute;
+  margin-left:620px;
 }
 .s3
 {
@@ -425,6 +584,22 @@ html, body {
   margin-top:20rem;
   margin-left:2rem;
   position:relative;
+}
+.open-button
+{
+   margin-top:25rem;
+  margin-left:2rem;
+  position:relative;
+  margin-bottom:10%;
+  margin-left:6rem;
+}
+.wrapper
+{
+   margin-top:-14rem;
+  margin-left:2rem;
+  position:relative;
+    margin-bottom:10%;
+    margin-left:6rem;
 }
 .s4
 {
@@ -933,6 +1108,35 @@ sessionStorage.setItem("quality",qual);
    alert("SELECT ALL REQUIRED PARAMETERS");
  }
 }
+function openForm() {
+  document.getElementById("myForm").style.display = "block";
+  document.getElementById("o").style.display="none";
+}
+
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
+  document.getElementById("o").style.display="block";
+}
+$(function(){
+    var textarea = $('.chat-text textarea');
+textarea.keypress(function(event) {
+    var $this = $(this);
+
+    if(event.keyCode == 13){
+      var msg = $this.val();
+      $this.val('');
+      $('.msg-insert').append("<div class='msg-send'>"+msg+"<span style='float:right;margin-top:10px;size:2px;'>&#10004;&#10004;</span></</div>");
+      }
+  });
+
+});
+function send()
+{ 
+  var t=$('.chat-text textarea');
+  var msg=t.val();
+  t.val('');
+  $('.msg-insert').append("<div class='msg-send'>"+msg+"<span style='float:right;margin-top:10px;size:2px;'>&#10004;&#10004;</span></div>");
+}
     </script>
 
       <h1 class="blog">ORDER NOW</h1>
@@ -1010,6 +1214,35 @@ sessionStorage.setItem("quality",qual);
 
   </h4>
  </div>     
+ <button class="open-button" id="o" onclick="openForm()">Need Help….?​</button>
+  <div class="wrapper" id="myForm">
+    <div class="chat-box">
+      <div class="chat-head">
+        <img src="./logo%20(1).jpg" width="16" style="float:left;">
+        <h4>Fidle</h4>
+        
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVt7HUYAvkYGKO9kLaXFx1HOT0ZyeX5WgA7w&usqp=CAU" onclick="closeForm()" style="float:right;width:22px;"/>
+
+
+      </div>
+      <div class="chat-body">
+        <div class="msg-insert">
+  <div class="msg-receive"> Facing trouble with…?​
+ 
+  </div>
+<div class="msg-receive">1.Content</div>
+  <div class="msg-receive">2.Number of slides​</div>
+  <div class="msg-receive">3.Price </div>
+</div>
+        <div class="chat-text">
+          <textarea placeholder="Send"></textarea>
+          <button style="width:auto;background-color:black;color:white;float:right;height:inherit;"
+          class="b" onclick="send()">Send</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
    </body>
 </html>
 
